<resources>
    <string name="app_name">ilt10</string>
    <string name="pokemon">Pokemon</string>
    <string name="login">Login</string>
    <string name="dimana_kamu">Dimana kamu?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cari_pokemon">Cari Pokemon</string>
    <string name="not_found_in_database">Hasil tidak ditemukan dalam database</string>
</resources>